--- a/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="@Url.Content("~")">
 
-    <link rel="stylesheet" href="~/styles.css">
-    
+    @Styles.Render("~/Content/css")
+
     <!-- Polyfill(s) for older browsers -->
     <script src="~/node_modules/core-js/client/shim.min.js"></script>
 
@@ -21,11 +21,40 @@
     <script src="~/node_modules/systemjs/dist/system.src.js"></script>
     <script src="~/systemjs.config.js"></script>
     <script>
-      System.import('main.js').catch(function(err){ console.error(err); });
+        System.import('main.js').catch(function (err) { console.error(err); });
     </script>
 </head>
 <body>
-    <stocks>Loading AppComponent content here ...</stocks>
-</body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("Ng Stocks", "Index", "Home", null, new { @class = "navbar-brand" })
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
 
+
+                </ul>
+
+            </div>
+        </div>
+    </div>
+    <div class="container body-content">
+
+        <stocks>Loading AppComponent content here ...</stocks>
+
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - Brian O'Neil</p>
+        </footer>
+    </div>
+</body>
 </html>
