--- a/SocialStocks2/Content/Site.css
+++ b/SocialStocks2/Content/Site.css
@@ -40,3 +40,13 @@ input[type="checkbox"].input-validation-error {
 .validation-summary-valid {
     display: none;
 }
+   
+.Red { 
+    color:red
+
+}
+   
+.Green {
+    color:green
+
+}
