--- a/SocialStocks2/app/components/app.component.stocks.html
+++ b/SocialStocks2/app/components/app.component.stocks.html
@@ -1,7 +1,4 @@
-﻿<h1>Hello {{name}}</h1>
-
-<b>Stocks List</b>
-
+﻿<b>Hello {{name}}</b>
 <table class="table table-striped" id="tblStockList">
     <thead>
         <tr>
@@ -12,11 +9,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let stock of stockslist" class="phone-listing">
+        <tr *ngFor="let stock of stockslist">
             <td>
                 <a href="Stocks/StocksAngular/Detail/{{stock.Symbol}}">{{ stock.Symbol }}</a>
             </td>
-            <td ng-class="stock.Color">{{ stock.Price }}</td>
+            <td ng-class="stock.Color">{{stock.Price}}</td>
             <td>
                 <a href="Stocks/StocksAngular/News/{{stock.Symbol}}">
                     <img src="images/Properties.jpg" />
@@ -32,3 +29,26 @@
 </table>
 
 
+
+
+<div id="AddStockForm" class="container-fluid" title="Add a Stock">
+    <div class="form-group">
+        <label><b>Symbol:</b></label>
+
+        <input type="text"
+               [(ngModel)]="newStockSym"
+               class="form-control"
+               (ngModelChange)="symbolChanged()" />
+    </div>
+    <div class="form-group">
+        <div class="form-control-static">
+            {{newStockName}}
+        </div>
+    </div>
+    <div class="row">
+        <button class="btn btn-primary" (click)="addStock()">Add</button>
+        <!--
+           <button class="btn" ng-click="cancel()">Cancel</button>
+         -->
+    </div>
+</div>
