--- a/SocialStocks2/app/components/app.component.stocks2.html
+++ b/SocialStocks2/app/components/app.component.stocks2.html
@@ -1,4 +1,4 @@
-﻿<b>Hello {{name}}</b>
+﻿<b>{{name}}</b>
 <table class="table table-striped" id="tblStockList">
     <thead>
         <tr>
@@ -27,22 +27,24 @@
         </tr>
     </tbody>
 </table>
-
-
-
-
 <div id="AddStockForm" class="container-fluid" title="Add a Stock">
-    <div class="form-group">
-        <label><b>Symbol:</b></label>
-
-        <input type="text"
-               [(ngModel)]="newStockSym"
-               class="form-control"
-               (ngModelChange)="symbolChanged()" />
-        
-        <button class="btn btn-primary" 
-                (click)="addStock()">Add</button>
-
+    <div class="row">
+        <div class="form-group">
+            <label>Symbol:</label>
+        </div>
+        <div class="form-group">
+            <input type="text"
+                   size="8"
+                   [(ngModel)]="newStockSym"
+                   class="form-control"
+                   (ngModelChange)="symbolChanged()" />
+        </div>
+        <div class="form-group">
+            <button class="btn btn-primary"
+                    (click)="addStock()">
+                Add
+            </button>
+        </div>
     </div>
     <div class="form-group">
         <div class="form-control-static">
@@ -50,7 +52,6 @@
         </div>
     </div>
     <div class="row">
-        
         <!--
            <button class="btn" ng-click="cancel()">Cancel</button>
          -->
