--- a/SocialStocks2/app/components/app.component.stocks2.html
+++ b/SocialStocks2/app/components/app.component.stocks2.html
@@ -1,11 +1,14 @@
-﻿<b>{{name}}</b>
+﻿
 <table class="table table-striped" id="tblStockList">
     <thead>
         <tr>
             <th style="width:50%;">Symbol</th>
             <th>Price</th>
             <th>News</th>
-            <th><a href="Stocks/StocksAngular/Add">Add +</a></th>
+            <th>
+             <button class="btn" 
+                     routerLink = "/Stocks/StocksAngular/Add">Add +</button>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -27,33 +30,3 @@
         </tr>
     </tbody>
 </table>
-<div id="AddStockForm" class="container-fluid" title="Add a Stock">
-    <div class="row">
-        <div class="form-group">
-            <label>Symbol:</label>
-        </div>
-        <div class="form-group">
-            <input type="text"
-                   size="8"
-                   [(ngModel)]="newStockSym"
-                   class="form-control"
-                   (ngModelChange)="symbolChanged()" />
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary"
-                    (click)="addStock()">
-                Add
-            </button>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="form-control-static">
-            {{newStockName}}
-        </div>
-    </div>
-    <div class="row">
-        <!--
-           <button class="btn" ng-click="cancel()">Cancel</button>
-         -->
-    </div>
-</div>
