added NEWS, DELETE

--- a/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-    <title>Angular Stocks</title>
+    <title>Angular 2 Stocks</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="@Url.Content("~")">
