--- a/SocialStocks2/app/components/app.component.stockrem.html
+++ b/SocialStocks2/app/components/app.component.stockrem.html
@@ -8,7 +8,7 @@
                 <b>Name :</b>
             </label>
             <div class="form-control-static">
-                {{stock.Name}}
+                {{stockName}}
             </div>
         </div>
         <div class="form-group">
@@ -16,16 +16,16 @@
                 <b>Symbol :</b>
             </label>
             <div class="form-control-static">
-                {{stock.Symbol}}
+                {{stockSymbol}}
             </div>
         </div>
         <div class="row">
-            <center>
+       
                 <button class="btn btn-primary" 
                         (click)="remove()">Delete</button>
                 <button class="btn" 
                         routerLink="/">Cancel</button>
-            </center>
+           
         </div>
     </form>
 </div>
