--- a/SocialStocks2/app/components/app.component.stocks.html
+++ b/SocialStocks2/app/components/app.component.stocks.html
@@ -5,52 +5,30 @@
             <th style="width:50%;">Symbol</th>
             <th>Price</th>
             <th>News</th>
-            <th><a href="Stocks/StocksAngular/Add">Add +</a></th>
+            <th>
+                <button class="btn"
+                        routerLink="/Stocks/StocksAngular/Add">
+                    Add +
+                </button>
+            </th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let stock of stockslist">
             <td>
-                <a href="Stocks/StocksAngular/Detail/{{stock.Symbol}}">{{ stock.Symbol }}</a>
+                <a routerLink = "['/Stocks/StocksAngular/Detail/', stock.Symbol]">{{ stock.Symbol }}</a>
             </td>
             <td [ngClass]="stock.Color">{{stock.Price}}</td>
             <td>
-                <a href="Stocks/StocksAngular/News/{{stock.Symbol}}">
+                <a [routerLink] = "['/Stocks/StocksAngular/News/', stock.Symbol]">
                     <img src="images/Properties.jpg" />
                 </a>
             </td>
             <td>
-                <a href="Stocks/StocksAngular/Remove/{{stock.Symbol}}">
+                <a [routerLink]="['/Stocks/StocksAngular/Delete/', stock.Symbol]">
                     <img src="images/Delete.png" />
                 </a>
             </td>
         </tr>
     </tbody>
 </table>
-
-
-<div id="AddStockForm" class="container-fluid" title="Add a Stock">
-    <div class="form-group">
-        <label><b>Symbol:</b></label>
-
-        <input type="text"
-               [(ngModel)]="newStockSym"
-               class="form-control"
-               (ngModelChange)="symbolChanged()" />
-        
-        <button class="btn btn-primary" 
-                (click)="addStock()">Add</button>
-
-    </div>
-    <div class="form-group">
-        <div class="form-control-static">
-            {{newStockName}}
-        </div>
-    </div>
-    <div class="row">
-        
-        <!--
-           <button class="btn" ng-click="cancel()">Cancel</button>
-         -->
-    </div>
-</div>
