--- a/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET Identity</h1>
-    <p class="lead">ASP.NET Identity is the membership system for ASP.NET apps. Following are the features of ASP.NET Identity in this sample application.</p>
-    <p><a href="http://www.asp.net/identity" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <h1>ASP.NET MVC Angular 2</h1>
+    <p class="lead"></p>
+    <p><a href="http://www.asp.net/" class="btn btn-primary btn-large">Learn more about ASP .NET&raquo;</a></p>
 </div>
 
 <div class="row">
