--- a/SocialStocks2/app/components/app.component.news.html
+++ b/SocialStocks2/app/components/app.component.news.html
@@ -1,6 +1,8 @@
 {{statusMessage}}
 
-<div id="accordion" class="container-fluid">
+<div id="accordion" 
+     class="container-fluid" 
+     style="margin-top:12px;">
     <div *ngFor="let item of newsItems">
         <div class="h4 panel" style="background:#eeeeee;" (click)="toggle(item)">
             <div style="width:24px; height:24px; border-radius:50%; background:#0094ff; float:left; text-align:center; vertical-align:middle;">
