removed real connection string to SQL db

--- a/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
@@ -4,8 +4,11 @@
 
 <div class="jumbotron">
     <h1>ASP.NET MVC Angular 2</h1>
-    <p class="lead"></p>
-    <p><a href="http://www.asp.net/" class="btn btn-primary btn-large">Learn more about ASP .NET&raquo;</a></p>
+    <p class="lead">Brian O'Neil</p>
+    <p>
+        This is my .Net playground.
+    </p>
+    <p><a href="http://www.asp.net/" class="btn btn-primary btn-large">More about ASP .NET..</a></p>
 </div>
 
 <div class="row">
