--- a/SocialStocks2/app/components/app.component.news.html
+++ b/SocialStocks2/app/components/app.component.news.html
@@ -1,7 +1,6 @@
 {{statusMessage}}
 
-<div id="accordion" 
-     class="container-fluid" 
+<div class="container-fluid" 
      style="margin-top:12px;">
     <div *ngFor="let item of newsItems">
         <div class="h4 panel" style="background:#eeeeee;" (click)="toggle(item)">
