--- a/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>ASP.NET MVC Angular 2</h1>
     <p class="lead">Brian O'Neil</p>
     <p>
-        This is my .Net playground.
+        This is my .Net playground for learning concepts such as Angular 2 and MVC.
     </p>
     <p><a href="http://www.asp.net/" class="btn btn-primary btn-large">More about ASP .NET..</a></p>
 </div>
