--- a/SocialStocks2/app/components/app.component.stockrem.html
+++ b/SocialStocks2/app/components/app.component.stockrem.html
@@ -19,13 +19,11 @@
                 {{stockSymbol}}
             </div>
         </div>
-        <div class="row">
-       
-                <button class="btn btn-primary" 
-                        (click)="remove()">Delete</button>
-                <button class="btn" 
-                        routerLink="/">Cancel</button>
-           
+        <div class="form-group">
+                <button class = "btn btn-primary" 
+                        (click) = "remove()">Delete</button>
+                <button class = "btn" 
+                        routerLink = "/">Cancel</button>
         </div>
     </form>
 </div>
