--- a/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Stocks/StocksAngular.cshtml
@@ -7,7 +7,7 @@
 
 <html>
 <head>
-    <title>Angular 2 Stocks</title>
+    <title>Angular 4 Stocks</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="@Url.Content("~")">
@@ -57,7 +57,8 @@
         </footer>
     </div>
 
-  
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
 
 </body>
 </html>
