styling stuff for the RSS reader

--- a/SocialStocks2/Areas/MVC/Views/Feeds/FeedList.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Feeds/FeedList.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<CustomConfigBuilderMvc.Models.Feed>
+﻿@model IEnumerable<SocialStocks2.Models.Feed>
 
-@using CustomConfigBuilderMvc
+@using SocialStocks2
 
  @foreach (var item in Model) {    
      <div class="ui-widget-content ui-corner-tl ui-corner-bl ui-corner-tr ui-corner-br" 
