--- a/SocialStocks2/Areas/MVC/Views/Feeds/RSSItems.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Feeds/RSSItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CustomConfigBuilderMvc.Models.RSSItem>
+﻿@model IEnumerable<SocialStocks2.Models.RSSItem>
 <table style="width:100%">
 @foreach (var item in Model.OrderByDescending(x=>x.PubDate)) {
  <tr>
