--- a/SocialStocks2/Areas/MVC/Views/Home/About.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Home/About.cshtml
@@ -59,7 +59,7 @@
     <h4>Customers:</h4>
     <div id="CustDiv" class="row">
         @{
-            Html.RenderPartial("Customers", ViewBag.Customers as List<Customer>);
+            Html.RenderPartial("Customers", ViewBag.Customers as List<SocialStocks2.Models.Customer>);
         }
     </div>
 
