--- a/SocialStocks2/Areas/MVC/Views/Shared/_Layout.cshtml
+++ b/SocialStocks2/Areas/MVC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Stocks", "StocksAngular", "Stocks")</li>
-                    <li>@Html.ActionLink("RSS Feeds", "Feeds", "MyFeeds")</li>
+                    <li>@Html.ActionLink("RSS Feeds", "MyFeeds", "Feeds")</li>
 
                     @if (Request.IsAuthenticated && User.IsInRole("Admin")) {
                         <li>@Html.ActionLink("RolesAdmin", "Index", "RolesAdmin")</li>
